# ITAK

./: CMakeLists.txt  ITAK.vpp
Main/: Analyzer.h  Configuration.cpp  Configuration.h  DenialOfServiceAnalyzer.cpp  DenialOfServiceAnalyzer.h  PortScanAnalyzer.cpp  PortScanAnalyzer.h  ResultSet.cpp  ResultSet.h  Utils.cpp  Utils.h  input.txt  main.cpp
TestMain/: TestSuites.cpp  TestSuites.h  testInput.txt  testMain.cpp
